--- a/app/src/main/res/layout/activity_view_replies.xml
+++ b/app/src/main/res/layout/activity_view_replies.xml
@@ -121,32 +121,59 @@
         </LinearLayout>
 
         <LinearLayout
-            android:id="@+id/reply_input_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
+            android:orientation="vertical"
             android:padding="8dp"
             android:background="@color/white"
             app:layout_constraintBottom_toBottomOf="parent">
 
-            <EditText
-                android:id="@+id/reply_edit_text"
-                android:layout_width="0dp"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:hint="Replying to post..."
+                android:orientation="horizontal"
                 android:padding="8dp"
-                android:maxLines="5"
-                android:scrollHorizontally="false"
-                android:imeOptions="actionSend" />
+                android:gravity="center_vertical">
 
-            <ImageButton
-                android:id="@+id/send_reply_button"
-                android:layout_width="wrap_content"
+                <androidx.appcompat.widget.SwitchCompat
+                    android:id="@+id/anonymous_reply_toggle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+
+                <TextView
+                    android:id="@+id/anonymous_reply_label"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Reply Anonymously"
+                    android:layout_marginStart="8dp" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/reply_input_layout"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:src="@drawable/ic_send"
-                android:contentDescription="Send Reply"
-                app:tint="@android:color/holo_green_dark" />
+                android:orientation="horizontal"
+                android:padding="8dp" >
+
+                <EditText
+                    android:id="@+id/reply_edit_text"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:hint="Replying to post..."
+                    android:padding="8dp"
+                    android:maxLines="5"
+                    android:scrollHorizontally="false"
+                    android:imeOptions="actionSend" />
+
+                <ImageButton
+                    android:id="@+id/send_reply_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_send"
+                    android:contentDescription="Send Reply"
+                    app:tint="@android:color/holo_green_dark" />
+            </LinearLayout>
         </LinearLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
